--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_animate: ^4.5.2
   fl_chart: ^1.1.1
   flutter_timezone: ^5.0.1
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
